k8s/diploma-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diploma-app
  labels:
    env: develop
    app: main
    tier: python
    owner: NorD
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diploma-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: diploma-app
    spec:
      containers:
        - name: diploma-app
          image: nordz0r/epam24_diplom:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
