k8s/covapp-backend.yaml
# Namespace prod
apiVersion: v1
kind: Namespace
metadata:
  name: prod

---
# Deployment Backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covapp-backend
  labels:
    app: covapp-backend
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: covapp-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: covapp-backend
    spec:
      containers:
      - image: nordz0r/covapp-backend:latest
        name: covapp-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      dnsPolicy: ClusterFirst

---

# Service for Backend
apiVersion: v1
kind: Service
metadata:
  name: covapp-backend
  namespace: prod
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: covapp-backend
