k8s/diploma-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: legion.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: diploma-app
             port:
                number: 8080
