k8s/grafana-ingress.yml
# Grafana
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-grafana
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
    projectcontour.io/response-timeout: infinity
spec:
  tls:
  - secretName: grafana
    hosts:
    - grafana.covid-app.ru
  rules:
  - host: grafana.covid-app.ru
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
